feat: Enhance hero video and navigation styling
Introduce a dynamic hero video playback configurable via constants and update the navbar logo to invert its colors based on scroll position. This improves user engagement and visual consistency across different sections of the website.

Additionally, refactor the About section to use a map for icon rendering, allowing for easier customization and expansion of stats. The Portfolio section now includes a "show more" functionality for projects, improving discoverability and initial load performance.

--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
         font-size: 22px;
         flex-shrink: 0;
         position: relative;
+        transition: all 0.3s ease;
+      }
+      .logo-box-inverted {
+        background-color: #fff;
+        color: #000;
       }
       .logo-dot {
         position: absolute;
