--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
     
-    <!-- Structured Data (Schema.org) s důrazem na lokality -->
+    <!-- Structured Data (Schema.org) -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -40,24 +40,7 @@
         "addressLocality": "Praha",
         "addressCountry": "CZ"
       },
-      "areaServed": [
-        {
-          "@type": "AdministrativeArea",
-          "name": "Praha"
-        },
-        {
-          "@type": "AdministrativeArea",
-          "name": "Středočeský kraj"
-        },
-        {
-          "@type": "AdministrativeArea",
-          "name": "Kraj Vysočina"
-        },
-        {
-          "@type": "AdministrativeArea",
-          "name": "Jihočeský kraj"
-        }
-      ],
+      "areaServed": ["Praha", "Středočeský kraj", "Kraj Vysočina", "Jihočeský kraj"],
       "geo": {
         "@type": "GeoCoordinates",
         "latitude": 50.0755,
@@ -80,56 +63,35 @@
       }
     </script>
     <style>
-      body {
-        font-family: 'Plus Jakarta Sans', sans-serif;
-      }
-      h1, h2, h3, h4, .serif-font {
-        font-family: 'Playfair Display', serif;
-      }
-      section {
-        scroll-margin-top: 80px;
-      }
+      body { font-family: 'Plus Jakarta Sans', sans-serif; }
+      h1, h2, h3, h4, .serif-font { font-family: 'Playfair Display', serif; }
+      section { scroll-margin-top: 80px; }
       .logo-box {
-        background-color: #000;
-        width: 36px;
-        height: 36px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: #fff;
-        font-weight: 800;
-        font-size: 22px;
-        flex-shrink: 0;
-        position: relative;
-        transition: all 0.3s ease;
+        background-color: #000; width: 36px; height: 36px;
+        display: flex; align-items: center; justify-content: center;
+        color: #fff; font-weight: 800; font-size: 22px;
+        position: relative; transition: all 0.3s ease;
       }
-      .logo-box-inverted {
-        background-color: #fff;
-        color: #000;
-      }
+      .logo-box-inverted { background-color: #fff; color: #000; }
       .logo-dot {
-        position: absolute;
-        top: 0;
-        right: 0;
-        width: 8px;
-        height: 8px;
-        background-color: #b9914d;
+        position: absolute; top: 0; right: 0;
+        width: 8px; height: 8px; background-color: #b9914d;
       }
     </style>
-    <script type="importmap">
+  <script type="importmap">
 {
   "imports": {
+    "vite": "https://esm.sh/vite@^7.3.1",
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.36.0",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "vite": "https://esm.sh/vite@^7.3.1"
+    "@google/genai": "https://esm.sh/@google/genai@^1.36.0"
   }
 }
 </script>
-  </head>
+</head>
   <body class="bg-stone-50 text-stone-900">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
