feat(hero): Enhance video background with custom styling
Introduces a new `no-interact` CSS class to prevent user interaction with the hero video. Adjusts YouTube iframe styling for better logo cropping and overall visual appeal, using a wider aspect ratio and increased scale. Changes the overlay to a darker, more subdued tone for improved text readability.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
         position: absolute; top: 0; right: 0;
         width: 8px; height: 8px; background-color: #b9914d;
       }
+      /* Zabránění interakci s videem v headeru */
+      .no-interact { pointer-events: none; user-select: none; }
     </style>
   <script type="importmap">
 {
