--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
+
 <!DOCTYPE html>
 <html lang="cs" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="referrer" content="no-referrer-when-downgrade" />
     
     <title>Jakub Minka | Svatební kameraman Praha & Vysočina</title>
     <meta name="description" content="Profesionální svatební filmy od Jakuba Minky. Působím v Praze, Středních Čechách, na Vysočině a v Jižních Čechách." />
