--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="referrer" content="no-referrer-when-downgrade" />
     
-    <title>Jakub Minka | Svatební kameraman Praha & Vysočina</title>
+    <title>MINKA weddings - svatební kameraman Jakub Minka</title>
     <meta name="description" content="Profesionální svatební filmy od Jakuba Minky. Působím v Praze, Středních Čechách, na Vysočině a v Jižních Čechách." />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
