--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
     </script>
     <style>
       body { font-family: 'Plus Jakarta Sans', sans-serif; }
-      h1, h2, h3, h4, .serif-font { font-family: 'Playfair Display', serif; }
+      h1, h2, h3, h4, .serif-font { font-family: 'Playfair Display', serif; text-wrap: balance;}
+      p {
+        text-wrap: pretty;
+      }
       .logo-box {
         background-color: #000; width: 36px; height: 36px;
         display: flex; align-items: center; justify-content: center;
