--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>MINKA weddings - svatební kameraman Jakub Minka</title>
     <meta name="description" content="Profesionální svatební filmy od Jakuba Minky. Působím v Praze, Středních Čechách, na Vysočině a v Jižních Čechách." />
 
+    <link rel="preconnect" href="https://ksncxtewqjvqjvjmsifo.supabase.co">
+    <link rel="preload" href="https://ksncxtewqjvqjvjmsifo.supabase.co/storage/v1/object/public/weddings/header.mp4" as="video" type="video/mp4">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
