--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <link rel="preconnect" href="https://ksncxtewqjvqjvjmsifo.supabase.co">
     <link rel="preload" href="https://ksncxtewqjvqjvjmsifo.supabase.co/storage/v1/object/public/weddings/header.mp4" as="video" type="video/mp4">
+    <link rel="dns-prefetch" href="https://ksncxtewqjvqjvjmsifo.supabase.co">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
